fixed leader card content alignment under 600px

--- a/src/index.css
+++ b/src/index.css
@@ -949,6 +949,13 @@ div.desc {
         display: flex;
         justify-content: center;
     }
+    .leaderCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+
+    }
 }
 @media only screen and (max-width: 400px) {
     .battlebotSeasonCardContainer {
